--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,8 @@
+
 ---
 layout: default
 title: About Things
 ---
-<h1>{{ page.title }}</h1>
-
-<p>I am about things<p>
+	<h1>{{ page.title }}</h1>
+  
+<p>about have accomplished<p>
