--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: William Adamowicz
 ---
 <div class="blurb">
 	<h1>Hi there, I'm William Adamowicz!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<p>This is a page</p>
 </div><!-- /.blurb -->
