--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: William Adamowicz
 ---
 <div class="blurb">
 	<h1>Hi there, I'm William Adamowicz!</h1>
-	<p>This is a page</p>
+	<p>Why won't the new posts arrive!?!!! GARRRRRR</p>
 </div><!-- /.blurb -->
