slight updates to pages

--- a/cv/index.html
+++ b/cv/index.html
@@ -3,5 +3,5 @@ layout: default
 title: CV Things
 ---
 	<h1>{{ page.title }}</h1>
-  
-<p>look at all the things I have accomplished<p>
+
+<p>Look upon all the things I have accomplished. Feast your eyes. Upon this confused madness.<p>
