--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ title: William Adamowicz
 ---
 <div class="blurb">
 	<h1>Hi there, I'm William Adamowicz!</h1>
-	<p>Why won't the new posts arrive!?!!! GARRRRRR</p>
+	<p>This is a page where I am logging my daily activity through the process of going from Hello World to professional programmer. It will probably not be interesting to anyone except if I become really successful (even just vaguely successful, I'll settle for) and inspire someone else to follow a similar path. If you have any questions I am fully prepared to give you an unprepared opinion on the matter.</p>
 </div><!-- /.blurb -->
