--- a/about/index.html
+++ b/about/index.html
@@ -3,5 +3,5 @@ layout: default
 title: About Things
 ---
 <h1>{{ page.title }}</h1>
-  
-<p>about have accomplished<p>
+
+<p>This is a page about me which will soon be about me and about things like me<p>
