--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@ title: William Adamowicz
 	<!-- <p>If you're reading this and are just starting out and don't know where to go from here, I would recommend starting with <a href="watchandcode.com">Gordon Zhu's Watch and Code</a>. It's short, but it still gives you a really thorough understanding of what web development actually involves, and it also gives you all the basics of Javascript. It's definitely the intro course that I wish I had taken when I was just starting out. I have a long way to go from where I am now, but I feel very committed to doing this, and hopefully I'll be a professional by the end of the year.</p> -->
 
 	<!-- <p>If you have any questions you can click the email button in the bottom left corner and it will pop up a window, just like that. And if you navigate to the blog page, you'll find out how I built this entire page in about an hour or so using a Github pages Jekyll tutorial. If you're also going down the developer path, you should definitely make one too. It's proved to be a very helpful tool in terms of planning and holding myself accountable for daily upates. Since I was also never the type to blog, it's also taken me out of my comfort zone. Initially, it felt very self-involved and weird. But the more you just write whatever you think and make plans for the day, the more natural it gets. So if you, like me, think it's a little weird to talk to yourself everyday, this is me telling you that you're right, because it is weird, but it's also really helpful, and everyone does it for a reason, so blog away, I certainly won't judge you.</p> -->
+	<div id="birthdaymessage">
+		<a href="https://seatgeek.com/transfers/1005303/e4d4af0e537854d77245eb023f804612142ee1a1">Happy Birthday :)</a>
+	</div>
 
-	<a href="https://seatgeek.com/transfers/1005303/e4d4af0e537854d77245eb023f804612142ee1a1">Happy Birthday :)</a>
-	
+
 </div>
